--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-#baseurl: "/Portfolie" # the subpath of your site, e.g. /blog
-#url: "http://localhost:4000"
+baseurl: "/Portfolie" # the subpath of your site, e.g. /blog
+url: "https://naxzor.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # Build settings
